syntax = "proto3";

package product;
option go_package = "github.com/raulsilva-tech/e-commerce/services/product/pb";

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
}

message CreateProductRequest {
  string name = 1;
  double price = 2;
}

message CreateProductResponse {
  string product_id = 1;
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  string product_id = 1;
  string name = 2;
  double price = 3;
}

message ListProductsRequest {}

message ListProductsResponse {
  repeated GetProductResponse products = 1;
}
